--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# ==================================
-# CONFIGURACION DE ARCHIVOS (UPLOAD)
-# ==================================
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-app.upload.dir=uploads/recursos
+# Configuración de carga de archivos
+app.upload.dir=src/main/resources/static/uploads/
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
 # ==================================
 # CONFIGURACION DE SEGURIDAD (JWT)
